2006-02-22  Paolo Carlini  <pcarlini@suse.de>

	* docs/html/ext/pb_assoc/basic_tree_assoc_cntnr_const_node_iterator.html:
	Fix links
	* docs/html/ext/pb_assoc/basic_tree_assoc_cntnr_node_iterator.html:
	Likewise.
	* docs/html/ext/pb_assoc/hash_based_containers.html: Likewise.
	* docs/html/ext/pb_assoc/hash_standard_resize_policy.html: Likewise.
	* docs/html/ext/pb_assoc/interface.html: Likewise..
	* docs/html/ext/pb_assoc/list_updates.html: Likewise.
	* docs/html/ext/pb_assoc/lu_based_containers.html: Likewise.
	* docs/html/ext/pb_assoc/resize_policies.html: Likewise.
	* docs/html/ext/pb_assoc/sample_probe_fn.html: Likewise.
	* docs/html/ext/pb_assoc/sample_range_hashing.html: Likewise.
	* docs/html/ext/pb_assoc/sample_ranged_hash_fn.html: Likewise.
	* docs/html/ext/pb_assoc/sample_ranged_probe_fn.html: Likewise.
	* docs/html/ext/pb_assoc/sample_resize_policy.html: Likewise.
	* docs/html/ext/pb_assoc/tree_assoc_cntnr_const_node_iterator.html:
	Likewise.
	* docs/html/ext/pb_assoc/tree_assoc_cntnr_node_iterator.html: Likewise.

2006-02-22  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/26132
	* include/tr1/hashtable (hashtable<>::rehash): Define.
	* testsuite/tr1/6_containers/unordered/hashtable/26132.cc: New.

	* include/tr1/hashtable: Trivial formatting and stylistic fixes.

	* testsuite/tr1/headers.cc: remove <tr1/hashtable>, not a tr1 header,
	only an implementation detail.

2006-02-22  Paolo Carlini  <pcarlini@suse.de>

	* include/debug/list (splice): Remove splice_alloc check, redundant
	after implementing the splice bits of N1599.

2006-02-21  Benjamin Kosnik  <bkoz@redhat.com>

	* include/c_std/cmath.tcc: Use _GLIBCXX_BEGIN_NAMESPACE,
	_GLIBCXX_END_NAMESPACE.

2006-02-21  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/c++config: Simplify debug namespaces.
	* include/ext/hash_set: Specialize insert_iterator after norm,
	debug containers have been (optionally) declared. Use nested
	namespaces.	
	* include/ext/hash_map: Same.